--- a/frontend/winddatenApp/package.json
+++ b/frontend/winddatenApp/package.json
@@ -26,8 +26,11 @@
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
     "@ionic/angular": "^6.1.9",
+    "heatmapjs": "^2.0.2",
     "ionicons": "^6.0.3",
     "leaflet": "^1.8.0",
+    "leaflet-heatmap": "^1.0.0",
+    "leaflet.heat": "^0.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
