--- a/powersimulator/package.json
+++ b/powersimulator/package.json
@@ -14,6 +14,7 @@
     "@types/mysql": "^2.15.21",
     "axios": "^0.27.2",
     "mysql2": "^2.3.3",
-    "node-fetch": "^3.2.10"
+    "node-fetch": "^3.2.10",
+    "tsc": "^2.0.4"
   }
 }
