--- a/scraper/package.json
+++ b/scraper/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "dms-conversion": "^3.1.1",
     "mysql2": "^2.3.3",
-    "table-scraper": "^1.0.3"
+    "table-scraper": "^1.0.3",
+    "typescript": "^4.8.3"
   }
 }
